[workspace]
resolver = "2"
members = [
  "arithmetic",
  "arrow",
  "bundle/core-objects",
  "bundle/unit-arithmetic",
  "datatype",
  "expr",
  "oxidize",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
arrow = { version = "55" }
cxx = "1"
cxx-build = "1"
datafusion = { version = "47", features = [] }
itertools = { version = "0.14" }
num-traits = "0.2"
tiledb-oxidize = { path = "oxidize" }
tiledb-arrow = { path = "arrow" }
tiledb-arithmetic = { path = "arithmetic" }
tiledb-datatype = { path = "datatype" }
tiledb-expr = { path = "expr" }
thiserror = { version = "2" }
