[workspace]
resolver = "2"
members = [
  "arithmetic",
  "arrow",
  "datatype",
  "expr",
  "cxx-interface",
  "test-support",
  "test-support/array-schema",
  "test-support/result-tile",
  "staticlib/core-objects",
  "staticlib/unit-arithmetic",
  "staticlib/unit-query-condition",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
arrow = { version = "55" }
cxx = "1"
cxx-build = "1"
datafusion = { version = "47", features = [] }
itertools = { version = "0.14" }
num-traits = "0.2"
proptest = { version = "1.6" }
tiledb-api = { git = "https://github.com/TileDB-Inc/tiledb-rs.git", branch = "main", features = [ "pod" ] }
tiledb-arrow = { path = "arrow" }
tiledb-arithmetic = { path = "arithmetic" }
tiledb-common = { git = "https://github.com/TileDB-Inc/tiledb-rs.git", branch = "main", features = [ "proptest-strategies" ] }
tiledb-cxx-interface = { path = "cxx-interface" }
tiledb-datatype = { path = "datatype" }
tiledb-expr = { path = "expr" }
tiledb-pod = { git = "https://github.com/TileDB-Inc/tiledb-rs.git", branch = "main", features = [ "proptest-strategies" ] }
tiledb-test-array-schema = { path = "test-support/array-schema" }
tiledb-test-cells = { package = "cells", git = "https://github.com/TileDB-Inc/tiledb-rs.git", branch = "main", features = [ "proptest-strategies" ] }
tiledb-test-query-condition = { path = "test-support/query-condition" }
tiledb-test-result-tile = { path = "test-support/result-tile" }
tiledb-test-support = { path = "test-support" }
thiserror = { version = "2" }
